# stattools

./: README.md  _quarto.yml  index.qmd  pyproject.toml
src/stattools/: __init__.py  data_processing.py  eda.py  predictive_modeling.py  stat_tests.py  visual.py
tests/: test_eda.py  test_model.py  test_processing.py  test_stat_tests.py  test_visual.py
