[project]
name = "stattools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ram", email = "ramgoennka08@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "ipykernel>=6.29.4",
    "quartodoc>=0.7.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stattools"]
